# stm32_client

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  ProjectOptions.cmake
src/: BinMsg.cpp  BinMsg.h  CMakeLists.txt  Channel.cpp  Channel.h  CommandProcesser.cpp  CommandProcesser.h  ErrnoException.h  LoadMsg.h  LocalStatusCode.h  Msg.h  Protocol.h  ProtocolMsg.h  SerialPort.cpp  SerialPort.h  main.cpp
